src/FinancialForce Accounting/objects/codaCurrencyRevalBatch__c.object
<CustomObject>
    <description>Processes currency revaluation documents into batches.</description>
    <fields>
        <fullName>CurrencyRevaluationBatchNumber__c</fullName>
        <displayFormat>CRB{000000}</displayFormat>
        <label>Currency Revaluation Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluationBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Batch</label>
        <referenceTo>codaCurrencyRevalBatch__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevaluationBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluationGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Group</label>
        <referenceTo>codaCurrencyRevaluationGroup__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevaluationBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevalBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Posting Error</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Canceling Error</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Batch</label>
    <nameField>
        <label>Currency Revaluation Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Revaluation Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>